# atris

./: .gitignore  Cargo.toml  README.md  deploy  output.json  serverless.yml
.githooks/: pre-push
atris_cli/: Cargo.toml
atris_cli/src/: initiator.rs  initiator_lite.rs  main.rs  responder.rs  responder_lite.rs
atris_client_lib/: Cargo.toml
atris_client_lib/src/: http_auth.rs  lib.rs  main.rs  sdk_auth.rs
atris_client_lib/src/comms/: initiator.rs  mod.rs  responder.rs  signal.rs
atris_common/: Cargo.toml
atris_common/src/: authenticate_user.rs  create_room.rs  create_user.rs  get_room.rs  join_room.rs  lib.rs  set_room_responder.rs
atris_gui/: Cargo.toml
atris_gui/download_src/: main.rs
atris_gui/src/: client.rs  main.rs
atris_server/: Cargo.toml
atris_server/src/: auth_table.rs  lib.rs  room_table.rs  session_table.rs
cli_client/: Cargo.toml
client_lib/: Cargo.toml
new-lambda-project/: Cargo.toml
rtc/: Cargo.toml  test.test
rtc/src/: client.rs  comms.rs  compress.rs  initiator.rs  main.rs  responder.rs  server.rs  signal.rs  symmetric.rs  symmetric_provided.rs  text_medium.txt  text_random.txt  text_short_20.txt
rtc/src/comms/: initiator.rs  mod.rs  responder.rs
rtc/src/texts/: text_medium1.txt
rtc/tests/: symmetric_provided.rs
rtc/texts/: text_basic.txt  text_long.txt  text_short_19.txt  text_short_25.txt  text_short_30.txt
server/: Cargo.toml  README.md  buildl  buildm
server/src/: main.rs  request_handler.rs
server_lambda/: Cargo.toml
