[package]
name = "atris_cli"
version = "0.1.0"
edition = "2021"

[[example]]
name = "initiator"
path = "src/initiator.rs"

[[example]]
name = "responder"
path = "src/responder.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atris_client_lib = {path="../atris_client_lib"}
tokio = "1.21.2"

[features]
local=["atris_client_lib/local"]