[package]
name = "atris_gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "Atris"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.5", default-features = false, features = ["glow","tokio","debug"] }
iced_futures = "0.5.1"
iced_native = "0.6.1"
reqwest = "0.11.13"
atris_client_lib = {path="../atris_client_lib"}
serde = "1.0.145"
serde_bytes = "0.11.7"
native-dialog = "0.6.3"

[features]
local=["atris_client_lib/local"]
