[package]
name = "atris_server"
version = "0.1.0"
edition = "2021"
autobins=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-dynamodb = "0.19.0"
lambda_runtime = "0.6.1"
log = "0.4.17"
serde = "1.0.145"
serde_json = "1.0.85"
tokio = {version = "1.21.2", features = ["full"] }
uuid = {version="1.1.2",features=["v4"]}
atris_common = {path="../atris_common"}
password-hash = "0.4.2"
argon2 = {version="0.4.1",features=["alloc","password-hash"]}
rand = { version = "0.8.5", default-features = false, features=["std"] }
