[package]
name = "rtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
base64 = "0.13.1"
clap = { version = "4.0.18", features = ["cargo"] }
hyper = { version = "0.14.20", features = ["server", "full"] }
lazy_static = "1.4.0"
serde_json = "1.0.87"
tokio = "1.21.2"
webrtc = "0.5.1"
