[package]
name = "rtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.5.1"
anyhow = "1.0.66"
base64 = "0.13.1"
bincode = "1.3.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.0.18", features = ["cargo"] }
flate2 = "1.0.24"
hyper = { version = "0.14.20", features = ["server", "full"] }
lazy_static = "1.4.0"
serde = { version =  "1.0.147", features = ["derive"] }
serde_bytes = "0.11.7"
serde_json = "1.0.87"
tokio = "1.21.2"
webrtc = "0.5.1"
